# call-assistant-bot

./: .bazelrc  .clang-tidy  .gitattributes  .gitignore  BUILD  MODULE.bazel  README.md
.github/workflows/: ci.yml  deploy.yml  deploying.yml  testing.yml
agents/gmeet/: BUILD  gmeet.py
assets/: AV_tranducer.excalidraw  Meeting-bot.excalidraw
av_transducer/: BUILD  debug.cc  main.cc
av_transducer/calculators/: BUILD  asr_calculator.cc  asr_calculator_test.cc  audio_converter_calculator.cc  audio_converter_calculator_test.cc  cdetr_calculator.cc  cdetr_calculator_test.cc  detection_calculator.cc  detection_calculator_test.cc  dumper_calculator.cc  evaluator_client_calculator.cc  ffmpeg_capture_audio_calculator.cc  ffmpeg_capture_audio_calculator_test.cc  ffmpeg_capture_screen_calculator.cc  ffmpeg_capture_screen_calculator_test.cc  ffmpeg_sink_video_calculator.cc  ffmpeg_sink_video_calculator_test.cc  ffmpeg_source_video_calculator.cc  image_frame_to_video_frame_calculator.cc  image_frame_to_video_frame_calculator_test.cc  lift_to_yuvimage_calculator.cc  ocr_calculator.cc  ocr_calculator_test.cc  speaker_name_rect_calculator.cc  speaker_name_to_render_calculator.cc  video_converter_calculator.cc  video_converter_calculator_test.cc
av_transducer/formats/: BUILD  asr.proto
av_transducer/tasks/: BUILD  audio_graph.cc  ocr_graph.cc  visual_graph.cc
av_transducer/utils/: BUILD  audio.cc  audio.h  audio_test.cc  capture_device_linux_test.cc  capture_device_macos_test.cc  container.cc  container.h  container_test.cc  converter.cc  converter.h  converter_test.cc  ffmpeg.cc  ffmpeg_linux_test.cc  video.cc  video.h  video_test.cc
cc_server/: BUILD  auth.py  cc_server.py  landing_page.py  logging.py  root.py  scheduler.py  scheduler_test.py
cc_server/docker/: BUILD
data/: BUILD
docker/: BUILD  bookworm.lock.json  bookworm.yaml  bullseye.lock.json  bullseye.yaml  noble.lock.json  noble.yaml  test_linux_amd64.yaml  test_linux_arm64.yaml
meeting_bot/: BUILD  google_cloud.py  google_cloud_test.py  meeting_bot.proto  meeting_bot.py  meeting_bot_test.py  xvfbwrapper.py
meeting_bot/articulator/: BUILD  articulator.proto  articulator.py  gmeet.py
meeting_bot/common/: BUILD  logging.py  logging_test.py
meeting_bot/evaluator/: BUILD  evaluator.proto  evaluator.py
meeting_bot/perceiver/: BUILD  av_transducer_operator.py  av_transducer_operator_test.py  perceiver.proto  perceiver.py
ml/asr/: BUILD  example.cc  model.cc  model.h  model_benchmark.cc  model_test.cc  test.cc
ml/asr/models/: BUILD
ml/detection/: BUILD  README.md  converter.py  converter_test.py  ml_server.py  ml_server_test.py  model.cc  model.h  model_benchmark.cc  model_test.cc  train.py
ml/detection/models/: BUILD  config.json  model.onnx  model_quantized.onnx  ort_config.json  preprocessor_config.json
ml/formats/: BUILD  detection.h
ml/leave_call/: BUILD  model.py  model_test.py
ml/ocr/: BUILD  converter.py  converter_test.py  encoder_kvcache.cc  encoder_kvcache.h  example.cc  model.cc  model.h  model_benchmark.cc  model_test.cc  preprocessing_converter.py  preprocessing_converter_test.py  processor.cc  processor.h  processor_test.cc  tokenizer_test.cc
ml/ocr/data/: BUILD  genai_config.json  tokenizer.json  tokenizer_config.json
ml/ocr/models/: BUILD  genai_config.json  vocab.h.inc  vocab.tsv
ml/tools/: BUILD  label_studio.py
ml/whisper/: BUILD  converter.py  converter_test.py
ml/whisper/models/: BUILD
models/florence2/: BUILD  converter.py  encoder_kvcache.cc  example.cc  image_processor_test.cc  model.h  model_test.cc  preprocessing_converter.py  processor.cc  processor_test.cc  tokenizer_test.cc
models/florence2/data/: BUILD  decoder_model_merged.onnx  embed_tokens.onnx  encoder_model.onnx  genai_config.json  processor_config.json  vision_encoder_with_postprocessing.onnx
screenreader/: BUILD  main.cc
screenreader/calculators/: BUILD  audio_converter_calculator.cc  audio_converter_calculator_test.cc  ffmpeg_capture_audio_calculator.cc  ffmpeg_capture_audio_calculator_test.cc  ffmpeg_capture_screen_calculator.cc  ffmpeg_capture_screen_calculator_test.cc  ffmpeg_sink_video_calculator.cc  ffmpeg_sink_video_calculator_test.cc
screenreader/utils/: BUILD  audio.cc  audio.h  audio_test.cc  capture_device_macos_test.cc  container.cc  container.h  container_test.cc  converter.cc  converter.h  converter_test.cc  ffmpeg.cc  ffmpeg.h  ffmpeg_linux_test.cc  ffmpeg_macos_test.cc
server/: BUILD  server.py
testdata/: BUILD  evaluator.jsonl
tools/: BUILD  sync.py
